Removed prioritzied and fixed enqueue